[gd_scene load_steps=7 format=3 uid="uid://hv31xo8w43i8"]

[ext_resource type="Script" uid="uid://b7er026mjllw8" path="res://scenes/components/shooting/moving_bullet.gd" id="1_0qigd"]
[ext_resource type="Script" uid="uid://c1ixa2ewmgywe" path="res://scenes/components/shooting/bullet_hitter.gd" id="2_aki2j"]
[ext_resource type="SpriteFrames" uid="uid://omarp61vxec3" path="res://images/fireball_sprite.tres" id="3_vh41d"]
[ext_resource type="Script" uid="uid://df86olo1oqpnl" path="res://scenes/components/shooting/bullet_movement_values.gd" id="4_aki2j"]
[ext_resource type="Script" uid="uid://c6f0327yq8wqj" path="res://scenes/components/shooting/straight_mover.gd" id="5_vh41d"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fu3in"]
radius = 8.0

[node name="CrawlerSpitBullet" type="Node2D" node_paths=PackedStringArray("hitter", "move_values", "animated_sprite")]
script = ExtResource("1_0qigd")
hitter = NodePath("BulletHitter")
move_values = NodePath("BulletMovementValues")
animated_sprite = NodePath("AnimatedSprite2D")

[node name="BulletHitter" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("2_aki2j")
metadata/_custom_type_script = "uid://c1ixa2ewmgywe"

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletHitter"]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_fu3in")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = -1.5708
sprite_frames = ExtResource("3_vh41d")

[node name="BulletMovementValues" type="Node2D" parent="."]
script = ExtResource("4_aki2j")
metadata/_custom_type_script = "uid://df86olo1oqpnl"

[node name="UpMover" type="Node2D" parent="." node_paths=PackedStringArray("move_values")]
script = ExtResource("5_vh41d")
move_values = NodePath("../BulletMovementValues")
