[gd_scene load_steps=2 format=3 uid="uid://dmhkg3gl04tvq"]

[ext_resource type="Script" uid="uid://b7er026mjllw8" path="res://scenes/components/shooting/moving_bullet.gd" id="1_4aqup"]

[node name="MovingBullet" type="Node2D"]
script = ExtResource("1_4aqup")
